--- a/static/assets/css/app.css
+++ b/static/assets/css/app.css
@@ -3,28 +3,40 @@
 @import url("https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800,900");
 @import url("https://fonts.googleapis.com/css?family=Lato:300,400,700,900");
 
+#keyword{
+    min-width: 265px;
+}
+
+#location{
+    min-width: 160px;
+}
+
+#job_type{
+    min-width: 230px;
+}
+
 input#when {
     text-transform: lowercase;
 }
 
 ::-webkit-input-placeholder {
     /* Chrome/Opera/Safari */
-    color: #9e95e0
+    color: #001dfa;
 }
 
 ::-moz-placeholder {
     /* Firefox 19+ */
-    color: #9e95e0;
+    color: #001dfa;
 }
 
 :-ms-input-placeholder {
     /* IE 10+ */
-    color: #9e95e0;
+    color: #001dfa;
 }
 
 :-moz-placeholder {
     /* Firefox 18- */
-    color: #9e95e0;
+    color: #001dfa;
 }
 
 /* line 3, ../sass/app.scss */
