--- a/templates/index.html
+++ b/templates/index.html
@@ -10,6 +10,21 @@
     <link rel="stylesheet" type="text/css" href="/static/assets/plugins/font-awesome/css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="/static/assets/plugins/slick/slick.css">
     <link rel="stylesheet" type="text/css" href="/static/assets/css/app.css">
+<style>
+#keyword{
+    min-width: 265px;
+}
+
+#location{
+    min-width: 160px;
+}
+
+#job_type{
+    min-width: 230px;
+}
+
+
+</style>
 </head>
 <body data-spy="scroll" data-target=".navbar" data-offset="230">
 
@@ -17,8 +32,7 @@
 <!--========== Header Area ==========-->
 <div class="menu-links">
     <div class="container">
-        <a href="javascript:" class="close-menu"><i class="fa fa-times"></i> </a>
-
+        <a href="javascript:;" class="close-menu"><i class="fa fa-times"></i> </a>
         <div class="row">
             <div class="col-sm-6">
                 <ul class="nav nav-tabs">
@@ -54,43 +68,39 @@
                     </div>
                     <div class="tab-pane" id="about">
                         <p class="normal-text">
-                            Businesses that partner with Google come in all shapes, sizes and market caps, and no one
-                            Google advertising solution works for all.
+                            Businesses that partner with Google come in all shapes, sizes and market caps, and no one Google advertising solution works for all.
                         </p>
-
                         <p class="normal-text">
-                            Your knowledge of o our range of product offerings can grow their business. Working with
-                            them, you set the vision and the strategy for how their advertising can reach thousands of
-                            users.
+                            Your knowledge of o our range of product offerings can grow their business. Working with them, you set the vision and the strategy for how their advertising can reach thousands of users.
 
                             Lea
                         </p>
                     </div>
 
                     <div class="tab-pane" id="contact">
-                        <div class="contact-form">
-                            <form action="">
-                                <div class="form-group">
-                                    <label>Your Name</label>
-                                    <input type="text" class="form-control"/>
-                                </div>
+                       <div class="contact-form">
+                           <form action="">
+                               <div class="form-group">
+                                   <label>Your Name</label>
+                                   <input type="text" class="form-control"/>
+                               </div>
 
-                                <div class="form-group">
-                                    <label>Your eMail</label>
-                                    <input type="text" class="form-control"/>
-                                </div>
+                               <div class="form-group">
+                                   <label>Your eMail</label>
+                                   <input type="text" class="form-control"/>
+                               </div>
 
-                                <div class="form-group">
-                                    <label>Your eMail</label>
-                                    <textarea class="form-control"></textarea>
-                                </div>
+                               <div class="form-group">
+                                   <label>Your eMail</label>
+                                   <textarea class="form-control"></textarea>
+                               </div>
 
-                                <div class="text-center submit-btn">
-                                    <button type="submit">Submit</button>
-                                </div>
+                               <div class="text-center submit-btn">
+                                   <button type="submit">Submit</button>
+                               </div>
 
-                            </form>
-                        </div>
+                           </form>
+                       </div>
                     </div>
                 </div>
             </div>
@@ -137,29 +147,23 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="home-content">
-                        <form action="" method="POST" id="job_search_form">
+                    <form action="" method="POST" id ="job_search_form">
 
-                            <h1>I'm an
-                                <select id="keyword">
-                                    <option value="Art Director">Art Director</option>
-                                    <option value="Director">Director</option>
-                                    <option value="Developer">Developer</option>
-                                </select>
-                                <br>looking for a job in
-                                <select id="location">
-                                    <option value="London">London</option>
-                                    <option value="Berlin">Berlin</option>
-                                    <option value="Milan">Milan</option>
-                                </select><br>as a
-                                <select id="job_type"><br>
-                                    <option value="Freelancer">freelancer</option>
-                                    <option value="Full Time">Full time</option>
-                                    <option value="Part time">Part time</option>
-                                    <option value="Internship">Internship</option>
-                                </select>
-                                <input id="when" type="text" placeholder="now" value="" class=""/>.
+                         <h1>I'm an
+                            <input id = "keyword" type="text" placeholder="Art Director" required value="" list="role-datalist" />
+                            <datalist id="role-datalist"></datalist>
+                            <br>looking for a job in
+                            <input id = "location" type="text" placeholder="London" required value="" list="location-datalist"/>
+                            <datalist id="location-datalist"></datalist>
+                            <br>as a
+                            <input id = "job_type" type="text" placeholder="Freelancer" required value="" list="type-datalist"/>
+                            <datalist id="type-datalist"></datalist>
+                            <br>
+                            <input type="submit" value="SUBMIT" class="btn btn-default" />
+
+                            
                             </h1>
-                        </form>
+                    </form>
                     </div>
 
                 </div>
@@ -171,7 +175,7 @@
 <section class="job-section">
     <div class="container">
         <div class="nav nav-tabs job-slider" id="recent_jobs_container">
-
+            
         </div>
         <!-- Nav tabs -->
 
@@ -181,7 +185,7 @@
 
 <section id="logos_section">
     <div class="container">
-        <div class="logo-section clearfix">
+        <div  class="logo-section clearfix">
             <!-- <div class="pull-left">
                 <i class="fa fa-bell"></i>
                 Turn on email alerts for this search
@@ -200,7 +204,7 @@
 
 </section>
 
-<section id="search_jobs_section">
+<section id ="search_jobs_section">
     <div class="container">
         <form action="" class="search-form">
             <input type="text" value="All Jobs">
@@ -210,39 +214,34 @@
 </section>
 
 <section>
-    <div class="container new_jobs" id="jobs_container">
-
-
+    <div class="container" id="jobs_container">
+         
+        
     </div>
 </section>
 
-<section id="contact_section">
+<section id ="contact_section">
     <div class="container">
         <div class="contact-section">
             <h3>Your Email</h3>
-
             <p>Get our top day's job offers delivered to your inbox</p>
-
-            <form action="" method="POST" id="contact_form">
+            <form action="" method="POST" id ="contact_form">
                 <div class="row">
                     <div class="col-sm-offset-1 col-sm-10">
                         <div class="row">
                             <div class="col-sm-6">
                                 <div class="form-field">
-                                    <input type="text" name="name" class="form-control" required placeholder="name"
-                                           value="">
+                                    <input type="text" name="name" class="form-control" required placeholder="name" value = "">
                                 </div>
                             </div>
                             <div class="col-sm-6">
                                 <div class="form-field">
-                                    <input type="email" name="email" class="form-control" required
-                                           placeholder="hello@gmail.com" value="">
+                                    <input type="email" name="email" class="form-control" required placeholder= "hello@gmail.com" value = "">
                                 </div>
                             </div>
                             <div class="col-sm-6">
                                 <div class="form-field">
-                                    <input type="text" name="what" class="form-control" required
-                                           placeholder="What are you looking ?" value="">
+                                    <input type="text" name="what" class="form-control" required placeholder="What are you looking ?" value="">
                                 </div>
                             </div>
                             <div class="col-sm-6">
@@ -250,17 +249,17 @@
                                     <button type="submit" class="slick-next slick-arrow">Next</button>
 
                                 </div>
+                                </div>
                             </div>
                         </div>
                     </div>
-                </div>
 
+                </form>
+
+                </div>
             </form>
 
         </div>
-        </form>
-
-    </div>
     </div>
 </section>
 
@@ -270,6 +269,7 @@
 <script src="/static/assets/plugins/scrollreveal/dist/scrollreveal.min.js"></script>
 <script src="/static/assets/plugins/slick/slick.min.js"></script>
 <script src="/static/assets/js/app.js"></script>
+<script src = "/static/assets/js/jquery.autocomplete.min.js"></script>
 
 </body>
 </html>
