--- a/static/assets/css/app.css
+++ b/static/assets/css/app.css
@@ -8,7 +8,7 @@
 }
 
 #location{
-    min-width: 160px;
+    min-width: 165px;
 }
 
 #job_type{
@@ -42,6 +42,8 @@ input#when {
     /* Firefox 18- */
     color: #d1bfd3
 }
+
+
 
 /* line 3, ../sass/app.scss */
 body {
@@ -96,8 +98,8 @@ a:hover {
 #home {
     display: flex;
     justify-content: center;
-    align-items: center;
-    padding-top: 100px;
+    align-items: center;    
+    height: calc(100vh - 40vh);
 }
 
 /* line 40, ../sass/app.scss */
@@ -1211,3 +1213,31 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, menu,
         height: auto;
     }
 }
+
+.footer-cont{background-color:#001dfa;padding:50px 0;text-align:center;color:#FFF}
+
+.footer-cont img{
+    max-width:100px;
+    margin-bottom:50px}
+
+.footer-cont p{display:block;
+    font:700 20px "Lato", sans-serif;
+    color:#a6a3fa;
+    margin-bottom:10px}
+.footer-cont p a{
+    font:700 20px "Lato", 
+    sans-serif;display:inline-block;
+    text-transform:capitalize;
+    color:#a6a3fa;margin:0 10px;
+    text-decoration:underline}
+.footer-cont p a.impr{
+    font-size:16px}
+.footer-cont p a:hover{
+    color:#FFF}
+.footer-cont span{
+    display:inline-block;
+    width:4px;
+    height:4px;
+    background-color:#a6a3fa;
+    border-radius:500px;
+    margin-top:20px}
