--- a/templates/index.html
+++ b/templates/index.html
@@ -11,17 +11,6 @@
     <link rel="stylesheet" type="text/css" href="/static/assets/plugins/slick/slick.css">
     <link rel="stylesheet" type="text/css" href="/static/assets/css/app.css">
 <style>
-#keyword{
-    min-width: 265px;
-}
-
-#location{
-    min-width: 160px;
-}
-
-#job_type{
-    min-width: 230px;
-}
 
 
 </style>
@@ -110,32 +99,35 @@
 <!-- Intro Section -->
 <section class="home-section">
     <nav class="navbar navbar-default">
-        <div class="container">
-            <div class="header-content text-center">
-                <div class="pull-left">
-                    <div class="menu-toggle">
-                        <a class="circle" href="#">
-                            <div class="lines">
-                                <i></i>
-                                <i></i>
-                                <i class="no-margin"></i>
-                            </div>
+        <div class="container col-lg-12">
+            <div class="col-lg-12">
+
+                <div class="header-content text-center">
+                    <div class="pull-left">
+                        <div class="menu-toggle">
+                            <a class="circle" href="#">
+                                <div class="lines">
+                                    <i></i>
+                                    <i></i>
+                                    <i class="no-margin"></i>
+                                </div>
 
 
-                        </a>
+                            </a>
+                        </div>
+
                     </div>
-
-                </div>
-                <div class="logo">
-                    <img src="/static/assets/images/logo.jpg"/>
-                </div>
-                <div class="pull-right">
-                    <div class="lang-links">
-                        <ul class="list-unstyled">
-                            <li><a href="#">DE</a></li>
-                            <li><span></span></li>
-                            <li><a href="#">EN</a></li>
-                        </ul>
+                    <div class="logo">
+                        <img src="/static/assets/images/logo.jpg"/>
+                    </div>
+                    <div class="pull-right">
+                        <div class="lang-links">
+                            <ul class="list-unstyled">
+                                <li><a href="#">DE</a></li>
+                                <li><span></span></li>
+                                <li><a href="#">EN</a></li>
+                            </ul>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -263,13 +255,25 @@
     </div>
 </section>
 
+<footer id="main-footer">
+    <div class="footer-cont">
+        <div class="container">
+            <img src="/static/assets/images/big_logo.png">
+            <p>&copy 2017 STUDIO TIGERS GmbH / All rights reserved Eiffelstrasse 43, 22769 Germany</p>
+            <p><a href="#">Facebook</a> <a href="#">Twitter</a></p>
+            <span></span>
+            <p class="no-margin"><a href="#" class="impr">IMPRESSIUM</a></p>
+        </div>
+    </div>
+
+</footer>
+
 
 <script src="/static/assets/plugins/jquery/jquery-1.12.0.min.js"></script>
 <script src="/static/assets/plugins/bootstrap/js/bootstrap.min.js"></script>
 <script src="/static/assets/plugins/scrollreveal/dist/scrollreveal.min.js"></script>
 <script src="/static/assets/plugins/slick/slick.min.js"></script>
 <script src="/static/assets/js/app.js"></script>
-<script src = "/static/assets/js/jquery.autocomplete.min.js"></script>
 
 </body>
 </html>
